[gd_scene load_steps=10 format=2]

[ext_resource path="res://Units/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Units/squirrel.png" type="Texture" id=3]
[ext_resource path="res://GameBoard/Cursor/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameBoard.gd" type="Script" id=5]
[ext_resource path="res://UnitOverlay/UnitOverlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameBoard/UnitPath.tscn" type="PackedScene" id=7]
[ext_resource path="res://Units/bear.png" type="Texture" id=8]
[ext_resource path="res://Units/bugcat.png" type="Texture" id=9]

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 5 )

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource( 6 )]

[node name="UnitPath" parent="GameBoard" instance=ExtResource( 7 )]

[node name="Unit" parent="GameBoard" instance=ExtResource( 1 )]
position = Vector2( 451, 135 )
skin = ExtResource( 3 )

[node name="Unit2" parent="GameBoard" instance=ExtResource( 1 )]
position = Vector2( 249, 42 )
skin = ExtResource( 8 )

[node name="Unit3" parent="GameBoard" instance=ExtResource( 1 )]
position = Vector2( 678, 270 )
skin = ExtResource( 9 )

[node name="Cursor" parent="GameBoard" instance=ExtResource( 4 )]

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
